<resources>
    <string name="app_name">POC Account</string>
    <string name="registration_failure_message">Failed to connect to server. Please try again later.</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="button_register_text">Register</string>
    <string name="validation_failure_message">Failed to connect to service. Please try again later</string>
    <string name="login_invalid_credential_message">Invalid email/password</string>
    <string name="button_login_text">Login</string>
    <string name="login_error_message">Failed to connect to service. Please try again later</string>
</resources>
